more findbugs (#1368)
[no release notes]